<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_layout"
    android:weightSum="1"
    android:orientation="horizontal"
    android:background="@drawable/background"
    tools:context=".LoginScreen">

    <RelativeLayout
        android:id="@+id/child_one"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:paddingBottom="10dp"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin">

        <ImageView
            android:id="@+id/sombraimg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            android:alpha="0.5"
            android:src="@drawable/one_sombra_personaje" />

        <ImageView
            android:id="@+id/protaimg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            android:src="@drawable/one_prota" />

        <ImageView
            android:id="@+id/logoimg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/logo"
            android:layout_above="@+id/sombraimg"
            android:layout_alignParentStart="true" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/child_two"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.4"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <ImageView
            android:src="@drawable/one_marco_derecho"
            android:id="@+id/marcoderechoimg"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:orientation="vertical"
            android:weightSum="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/LogInBig"
                    android:textSize="40sp"
                    android:textColor="@android:color/white"
                    android:layout_alignParentBottom="true"
                    android:paddingBottom="10dp"
                    android:gravity="center_horizontal" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:textSize="20sp"
                    android:background="@drawable/edittext"
                    android:hint="@string/User"
                    android:gravity="center"
                    android:id="@+id/UserEt"
                    android:layout_alignParentTop="true">
                </EditText>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:textSize="20sp"
                    android:background="@drawable/edittext"
                    android:hint="@string/Pass"
                    android:gravity="center"
                    android:id="@+id/PassEt"
                    android:layout_below="@+id/UserEt"
                    android:inputType="textPassword">
                 </EditText>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:textSize="20sp"
                    android:text="@string/LogIn"
                    android:id="@+id/Loginbtn"
                    android:layout_below="@+id/PassEt"
                    android:layout_alignParentStart="true"
                    style="@style/GreenButton">
                </Button>

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:textSize="20sp"
                    android:text="@string/SignUp"
                    android:id="@+id/Registerbtn"
                    android:layout_alignParentTop="true"
                    style="@style/RedButton">
                </Button>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ILostMyPassword"
                    android:textSize="15sp"
                    android:textColor="@android:color/white"
                    android:layout_alignParentBottom="true"
                    android:paddingBottom="10dp"
                    android:gravity="center_horizontal" />

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/child_three"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.1"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingEnd="10dp">

        <TextView
            android:id="@+id/Ghostbtn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"/>

        <ImageView
            android:src="@drawable/one_googleplus_btn"
            android:id="@+id/googleplusimg"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:adjustViewBounds="true"
            android:layout_above="@+id/Ghostbtn2"
            android:layout_alignParentStart="true"/>

        <ImageView
            android:src="@drawable/one_facebook_btn"
            android:id="@+id/facebookimg"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:adjustViewBounds="true"
            android:layout_above="@+id/googleplusimg"
            android:layout_alignParentStart="true"/>

    </RelativeLayout>



</LinearLayout>
