<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="horizontal"
    android:weightSum="1"
    tools:context=".LoginScreen"
    android:baselineAligned="false">

    <LinearLayout
        android:id="@android:id/tabs"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.4"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingEnd="30dp"
        android:paddingStart="10dp"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:layout_marginTop="0dp">
            <RelativeLayout
                android:id="@+id/coin_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerHorizontal="false">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/background_coin"
                android:alpha="0.8"
                android:gravity="start"
                android:src="@drawable/three_c_background_coin"
                android:adjustViewBounds="false"
                android:layout_marginStart="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:id="@+id/editText"
                    android:text="@string/ShopMoney"
                    android:textColor="#ffc955"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:layout_marginEnd="6dp"
                    android:layout_alignEnd="@id/background_coin"
                    android:textAlignment="gravity" />

            </RelativeLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/big_coin"
                android:src="@drawable/three_c_big_coin"
                android:cropToPadding="false" />



        </RelativeLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:textSize="30sp"
            android:background="@drawable/buttonmenu"
            android:textColor="@android:color/white"
            android:text="@string/Cosmetic"
            android:id="@+id/Cosmeticbtn"
            android:gravity="center"
            android:layout_marginTop="10dp"
            >
        </Button>
        <Button
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:textSize="30sp"
            android:background="@drawable/buttonmenu"
            android:textColor="@android:color/white"
            android:text="@string/Usable"
            android:id="@+id/usablebtn"
            android:gravity="center"
            android:layout_marginTop="5dp"
            >
        </Button>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/fragment_place"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.6"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingEnd="10dp"
        android:paddingStart="0dp"
        android:paddingTop="@dimen/activity_vertical_margin">



    </LinearLayout>

</LinearLayout>
