<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="horizontal"
    android:weightSum="1"
    tools:context=".MainMenuScreen">

    <RelativeLayout
        android:id="@+id/child_one"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:paddingBottom="10dp"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin">

        <ImageView
            android:id="@+id/sombraimg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            android:alpha="0.5"
            android:src="@drawable/one_sombra_personaje" />

        <ImageView
            android:id="@+id/protaimg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            android:src="@drawable/one_prota" />

        <ImageView
            android:id="@+id/logoimg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/logo"
            android:layout_above="@+id/sombraimg"
            android:layout_alignParentStart="true" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:weightSum="1">

        <RelativeLayout
            android:id="@+id/ghost_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:paddingEnd="5dp"
            android:paddingTop="5dp">

            <ImageView
                android:id="@+id/logout_btn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:adjustViewBounds="true"
                android:src="@drawable/seven_settings_button"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true" />

            <ImageView
                android:id="@+id/music_btn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true" />

            <ImageView
                android:id="@+id/fx_btn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true" />

            <ImageView
                android:id="@+id/settings_btn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/button_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:orientation="vertical"
            android:paddingBottom="0dp"
            android:paddingEnd="10dp"
            android:paddingStart="0dp"
            android:paddingTop="10dp">

            <Button
                android:id="@+id/SoloModebtn"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/buttonmenu"
                android:gravity="center"
                android:text="@string/SoloMode"
                android:textColor="@android:color/white"
                android:textSize="30sp">

            </Button>

            <Button
                android:id="@+id/Multiplayerbtn"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/buttonmenu"
                android:gravity="center"
                android:text="@string/MultiPlayer"
                android:textColor="@android:color/white"
                android:textSize="30sp">

            </Button>

            <Button
                android:id="@+id/Shopbtn"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/buttonmenu"
                android:gravity="center"
                android:text="@string/Shop"
                android:textColor="@android:color/white"
                android:textSize="30sp">

            </Button>

            <Button
                android:id="@+id/Achievementsbtn"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/buttonmenu"
                android:gravity="center"
                android:text="@string/Achievements"
                android:textColor="@android:color/white"
                android:textSize="30sp">

            </Button>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>